# permumark

./: .dockerignore  .gitignore  ARTIFACT-EVALUATION.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  envtest.py  pyproject.toml  setup.py
evaluation/: attacks.py  baseline.py  eval_utils.py  evaluation.py  evasion_finetune.py  evasion_pruning.py  evasion_quantization.py  probability_estimation.py  sparse_gpt.py  wanda.py
evaluation/plots/: probability.py
permumark/: __init__.py  ecc.py  permutation_extraction.py  permutation_inv.py  permutation_mapping.py  utils.py  watermark.py
permumark/derangement/: __init__.py  _derangement.py  derangement.c
scripts/: build.sh  download.sh  efficiency_jobs.sh  evaluate_robustness.sh  fetch_server_log.sh  finetune_models.sh  pruning_jobs.sh  quantization_jobs.sh  utility_jobs.sh
